mypy_errors.txt
app/security/owasp_validator.py:176:17: error: Statement is unreachable 
[unreachable]
                    issues.append(
                    ^
app/cosmic/primitives/existential_interconnect.py:171:53: error: Right operand
of "or" is never evaluated  [unreachable]
    ...       transfer_security_level = security_level or self.security_level
                                                          ^~~~~~~~~~~~~~~~~~~
app/cli/indexer.py:18: error: Unused "type: ignore" comment  [unused-ignore]
        SentenceTransformer = None  # type: ignore
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/infrastructure_metrics_service.py:218:40: error: Right operand of
"and" is never evaluated  [unreachable]
            if self._collection_thread and self._collection_thread.is_aliv...
                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/infrastructure_metrics_service.py:219:13: error: Statement is
unreachable  [unreachable]
                return
                ^~~~~~
app/services/infrastructure_metrics_service.py:222:35: error: Incompatible
types in assignment (expression has type "Thread", variable has type "None") 
[assignment]
            self._collection_thread = threading.Thread(target=self._collec...
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~...
app/services/infrastructure_metrics_service.py:223:9: error: "None" has no
attribute "start"  [attr-defined]
            self._collection_thread.start()
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/infrastructure_metrics_service.py:229:13: error: Statement is
unreachable  [unreachable]
                self._collection_thread.join(timeout=5.0)
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/telemetry/unified_observability.py:899:9: error: Need type annotation for
"dependencies" (hint: "dependencies: dict[<type>, <type>] = ...") 
[var-annotated]
            dependencies = {}
            ^~~~~~~~~~~~
app/services/user_analytics_metrics_service.py:397:17: error: Need type
annotation for "user_sessions"  [var-annotated]
                    user_sessions = defaultdict(int)
                    ^~~~~~~~~~~~~
app/services/user_analytics_metrics_service.py:722:24: error: Need type
annotation for "segments"  [var-annotated]
                segments = {segment: [] for segment in UserSegment}
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/horizontal_scaling_service.py:286:9: error: Statement is
unreachable  [unreachable]
            return available_servers[0] if available_servers else None
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/distributed_resilience_service.py:1009:17: error: Unsupported
target for indexed assignment ("Collection[str]")  [index]
                    stats["circuit_breakers"][name] = cb.get_stats()
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/distributed_resilience_service.py:1012:17: error: Unsupported
target for indexed assignment ("Collection[str]")  [index]
                    stats["retry_managers"][name] = rm.retry_budget.get_st...
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/distributed_resilience_service.py:1015:17: error: Unsupported
target for indexed assignment ("Collection[str]")  [index]
                    stats["bulkheads"][name] = bh.get_stats()
                    ^~~~~~~~~~~~~~~~~~~~~~~~
app/services/distributed_resilience_service.py:1018:17: error: Unsupported
target for indexed assignment ("Collection[str]")  [index]
                    stats["adaptive_timeouts"][name] = at.get_stats()
                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/database_sharding_service.py:402:33: error: Value of type variable
"SupportsRichComparisonT" of "max" cannot be "object"  [type-var]
                "total_latency_ms": max(r["latency_ms"] for r in results) ...
                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/ai_model_metrics_service.py:644:18: error: Need type annotation
for "groups"  [var-annotated]
            groups = defaultdict(lambda: {"pred": [], "truth": []})
                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/services/ai_model_metrics_service.py:837:21: error: Unsupported target for
indexed assignment ("object")  [index]
                        summary["models"][model_key] = {
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
app/cosmic/evolution/sece.py:328:9: error: Need type annotation for
"insights_by_type"  [var-annotated]
            insights_by_type = defaultdict(int)
            ^~~~~~~~~~~~~~~~
app/cosmic/evolution/sece.py:333:9: error: Need type annotation for
"recommendations_by_priority"  [var-annotated]
            recommendations_by_priority = defaultdict(int)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 21 errors in 11 files (checked 165 source files)
